# MouseRust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  setup.iss
.github/workflows/: ci.yml  release.yml
src/: main.rs
static/: index.html
static/js/: main.js
