[package]
name = "mouse"
version = "0.1.0"
authors = ["Doge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.13"
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.5"
futures = "0.3.5"