[package]
name = "mouse"
version = "0.1.0"
authors = ["Doge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.13"
app_dirs2 = "2.3.0"
log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.5"
futures = "0.3.5"
nwg = { version = "^1.0.12", package = "native-windows-gui" }
nwd = { version = "^1.0.3", package = "native-windows-derive" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"